    - Changed Atomic wave damage type for atomic-rocket from explosive to radioactive.
    - All units, turret, spawners have a max of 75% radioactive damage cap.

  Bugfixes:
    - Fixed an issue that armoured spawn spec were not included.
    - Fixed an issue where race caches in race mods are not updated when race levels up.

---------------------------------------------------------------------------------------------------
Version: 1.19.2
Date: 2023-08-12

  Bugfixes:
    - Fixed a start up crash when a spawn specification did not included temperature.
    - Fixed a start up crash when none of the spawn specifications loaded.

---------------------------------------------------------------------------------------------------
Version: 1.19.1
Date: 2023-08-11

  Bugfixes:
    - Fix a crash where settings in race mod cache did not properly refresh.

---------------------------------------------------------------------------------------------------
Version: 1.19.0
Date: 2023-08-11

  Features:
    - Rebuild default autoplace workflow to support unlimited race mods.
    - default autoplace now supports temperature and elevation variation under certain conditions.
    - Armoured/Cold/Explosive/Toxic biters support terrain temperature modifier for default mapping method.
    - All custom biters support map color changes.
    - Added "Enforce Temperature" startup settings. When this is set, spawners in default mapping method are generated according to its temperature specification.
    - A patch of no-one land may generated under certain conditions. Treat it as oasis, if the enemies have not expanded into it.
    - Removed dependency of erm_ prefix.  Added new way to register ERM race for data manipulation in data stage.
    - Added erm_libs as dependency.

  Changes:
    - ERM Roach death world now uses 100% starting area, instead of 75%
    - Change default boss spawn attack group timer from 3.5mins to 7mins

  Optimizations: