@@ -29,6 +29,10 @@ end
 --- Cache force name that is one of the ERM races.
 ---
 function ForceHelper.extract_race_name_from(force_name)
+    if force_name == 'enemy' then
+        return ForceHelper.default_mod_name
+    end
+
     if global.force_race_name_cache[force_name] then
         return global.force_race_name_cache[force_name]
     end
@@ -43,7 +47,8 @@ function ForceHelper.extract_race_name_from(force_name)
         end
     end
 
-    return ForceHelper.default_mod_name
+    global.force_race_name_cache[force_name] = nil
+    return global.force_race_name_cache[force_name]
 end
 
 function ForceHelper.get_force_name_from(race_name)
